--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -8,7 +8,7 @@
                     <h1 class="card-text"> {{this.title}}</h1>
                     <h2 class="card-text"> {{this.description}}</h2>
                     <h2 class="card-text"> $ {{this.price}}</h2>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="#" class="btn btn-primary">VER MÁS</a>
                 </div>
             </div>
         </div>
