se cambia de lugar el index.js por error de consola

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,6 +1,6 @@
 <section>
     <div>
-        <h1 style="font-size: 50px; font-weight: bold; text-align: center;">Real Time Products:</h1>
+        <h1 style="font-size: 50px; font-weight: bold; text-align: center;">PRODUCTS:</h1>
     </div>
 
     <div style="margin: 90px; font-size: 20px; text-align:center">
@@ -32,4 +32,4 @@
     </div>
 </section>
 
-<script src="/src/public/js/realtime.js"></script>
+<script src="/js/index.js"></script>
