se terminó configuración de  funcion addproducts en localhost - correccion

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -10,12 +10,12 @@
             <br / style="font-size: 10px">
             <input type="text" id="prod-title" name="prod-title" placeholder="Title"><br>
             <input type="text" id="prod-description" name="prod-description" placeholder="Description"><br>
-            <input type="text" id="prod-category" name="prod-category" placeholder="Category"><br>
             <input type="number" id="prod-price" name="prod-price" placeholder="Price"><br>
             <input type="text" id="prod-thumbnail" name="prod-thumbnail" placeholder="Thumbnail"><br>
             <input type="number" id="prod-code" name="prod-code" placeholder="Code"><br>
             <input type="text" id="prod-stock" name="prod-stock" placeholder="Stock"><br>
-
+            <input type="text" id="prod-status" name="prod-status" placeholder="Status: true or false"><br>
+            <input type="text" id="prod-category" name="prod-category" placeholder="Category"><br>
 
             <br />
             <input id="post" type="submit" value="Post" class="btn btn-primary">
