--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,12 +2,14 @@
     <div class="row">
         {{#each products}}
             <div class="card" style="width: 18rem;">
-                <img src="{{this.thumbnail}}" class="card-img-top" alt="...">
+                <p style="text-align: left;" class="card-text"> Id: {{this.id}}</p>
+                <img style="margin: 0 auto; width:150px; text-align: center;" src="{{this.thumbnail}}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h1 class="card-text"> {{this.title}}</h1>
-                    <h2 class="card-text"> {{this.description}}</h2>
-                    <h2 class="card-text"> $ {{this.price}}</h2>
-                    <a href="#" class="btn btn-primary">VER MÁS</a>
+                    <h1 style="text-align: center; font-size:25px;" class="card-text"> {{this.Title}}</h1>
+                    <h2 style="text-align: center; font-size:25px;" class="card-text"> {{this.description}}</h2>
+                    <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.price}}</h2>
+                    
+                    <button style="display: block; margin: 0 auto;" href="#" class="btn btn-primary">VER MÁS</button>
                 </div>
             </div>
         {{/each}}
