--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 </head>
 
 
-<body>
+<body style="background-image: url('https://picsum.photos/id/114/3264/2448'); background-size: cover;">
     {{{body}}}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
