actualizacion de archivos en lista de productos - CHECK

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -31,6 +31,16 @@
         <input id="post-delete" type="submit" value="Delete" class="btn btn-danger">
     </div>
     </div>
+
+    <br / style="font-size: 90px">
+
+    <h1>PRODUCT LIST:</h1>
+    <ul id="productListContainer"></ul>
+
+
+
+
+
 </section>
 
 <script src="/socket.io/socket.io.js"></script>
