--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -4,7 +4,7 @@
 </head>
 
 
-<body style="position: fixed; margin-left: 300px; background-color:white;">
+<body style="position: fixed; margin-left: 300px;">
 <div style="margin: 100px 100px 100px 300px; color: white; margin-left: 120px; font-size:23px;" id="contenido"></div>
 
 
