--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,12 +1,12 @@
 <section>
     <div>
-        <h1 style="font-size: 50px; font-weight: bold; text-align: center;">PRODUCTS:</h1>
+        <h1 style="color: white; font-size: 50px; font-weight: bold; text-align: center;">PRODUCTS:</h1>
     </div>
 
-    <div style="margin: 90px; font-size: 20px; text-align:center">
+    <div style="color: white; margin: 90px; font-size: 20px; text-align:center">
         <br style="font-size: 40px; display: flex; justify-content: center; ">
         <form id="form">
-            <h1 style="margin-bottom: 5px; font-size: 20px;">Add Products:</h1>
+            <h1 style="margin-bottom: 5px; font-size: 25px;">Add Products:</h1>
             <br / style="font-size: 10px">
             <input type="text" id="prod-title" name="prod-title" placeholder="Title"><br>
             <input type="text" id="prod-description" name="prod-description" placeholder="Description"><br>
@@ -25,7 +25,7 @@
     <br / style="font-size: 40px">
 
     <div style="margin: 30px; font-size: 20px; text-align:center" id="delete">
-        <h1 style="font-size: 20px;">Put the id number for delete a Product:</h1>
+        <h1 style="color: white; font-size: 25px;">Put the id number for delete a Product:</h1>
         <input type="number" id="prod-delete" name="prod-delete" placeholder="id">
         <br / style="font-size: 30px"> <br />
         <input id="post-delete" type="submit" value="Delete" class="btn btn-danger">
@@ -34,8 +34,8 @@
 
     <br / style="font-size: 90px">
 
-    <h1>PRODUCT LIST:</h1>
-    <ul id="productListContainer"></ul>
+    <h1 style="color: white; font-size: 40px">PRODUCT LIST:</h1>
+    <ul style="color: white; font-size: 23px;" id="productListContainer"></ul>
 
 
 
