se agrega boton al chat

--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -11,7 +11,10 @@
 
 
 <footer style="position: fixed; bottom: 0; left: 0; right: 0; padding: 10px; z-index: 999;">
-    <input id="caja" class="form-control form-control-lg" type="text" placeholder="Escriba aqui..." aria-label=".form-control-lg example"> 
+    <div style="display: flex; align-items: center;">
+    <input id="caja" class="form-control form-control-lg" type="text" placeholder="Write here..." aria-label=".form-control-lg example"> 
+    <button id="btnSend" style="height: 47px; width: 100px;" type="button" class="btn btn-primary">SEND</button>
+    </div>
 </footer>
 
 
