--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -5,7 +5,7 @@
                 <p style="text-align: left;" class="card-text"> Id: {{this.id}}</p>
                 <img style="margin: 0 auto; width:150px; text-align: center;" src="{{this.thumbnail}}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h1 style="text-align: center; font-size:25px;" class="card-text"> {{this.Title}}</h1>
+                    <h1 style="text-align: center; font-size:25px;" class="card-text"> {{this.title}}</h1>
                     <h2 style="text-align: center; font-size:25px;" class="card-text"> {{this.description}}</h2>
                     <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.price}}</h2>
                     
