--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -8,7 +8,8 @@
                     <h1 style="text-align: center; font-size:25px;" class="card-text"> {{this.title}}</h1>
                     <h2 style="text-align: center; font-size:20px;" class="card-text"> {{this.description}}</h2>
                     <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.price}}</h2>
-                    
+                    <h2 style="color:red; text-align: center; font-size:10px;" class="card-text"> Stock: {{this.stock}}</h2>
+
                     <button style="display: block; margin: 0 auto;" href="#" class="btn btn-primary">Agregar al carrito</button>
                 </div>
             </div>
