--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,4 +1,18 @@
-<div class="container">
+  
+  
+  
+  <div style="background-color: white" class="container">
+  <div class="row">
+
+<br></div>
+    <p style="margin: 0 auto; text-align: center"; class="col-9"><strong>CARRITO 🛒:</strong></p>
+    <hr/>
+
+  </div>
+</div>
+  
+  
+  <div class="container">
     <div style="padding: 80px"; class="row">
         {{#each products}}
             <div class="card" style="width: 18rem;">
@@ -10,40 +24,28 @@
                     <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.price}}</h2>
                     <h2 style="color:red; text-align: center; font-size:10px;" class="card-text"> Stock: {{this.stock}}</h2>
 
-                    <button id="addToCart" style="display: block; margin: 0 auto;" href="#" class="btn btn-primary">Agregar al carrito</button>
+                    <button style="display: block; margin: 0 auto;" href="#" class="btn btn-primary">Agregar al carrito</button>
                 </div>
             </div>
             {{/each}}
     </div>
 </div>
-
-
-
-
-
-
-
-<footer style="width: 100%; bottom: 0; position: fixed; background-color:white; padding-top: 30px; bottom: 0; padding-top: 5px;">
-  <div style="text-align: center; ">
-    {{#each pageNumbers}}
-      {{#if this.isCurrent}}
-        <a style="text-align: center; font-size: 22px;" href="{{null}}">{{this.number}}</a>
-      {{/if}}
-      {{#if this.isPrevious}}
-        <a style="text-align: center; font-size: 22px;" href="{{this.link}}">{{this.number}}</a>
-      {{/if}}
-      {{#if this.isNext}}
-        <a style="text-align: center; font-size: 22px;" href="{{this.link}}">{{this.number}}</a>
-      {{/if}}
-    {{/each}}
-  </div>
-</footer>
-
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/socket.io/socket.io.js"></script>
 
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/products.js"></script>
 
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/cart.js"></script>
