--- a/src/views/img.handlebars
+++ b/src/views/img.handlebars
@@ -24,3 +24,14 @@ enctype="multipart/form-data"
 </div>
 
 </form>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/socket.io/socket.io.js"></script>
+
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/img.js"></script>
+
