--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,51 +1,35 @@
-  
-  
-  
-  <div style="background-color: white" class="container">
-  <div class="row">
+<p style="color:brown">hola</p>
 
-<br></div>
-    <p style="margin: 0 auto; text-align: center"; class="col-9"><strong>CARRITO 🛒:</strong></p>
-    <hr/>
-
-  </div>
-</div>
-  
-  
-  <div class="container">
+<div class="container">
     <div style="padding: 80px"; class="row">
-        {{#each products}}
-            <div class="card" style="width: 18rem;">
+
+            <div class="card" style="width: 2000px;">
                 <p style="text-align: left;" class="card-text"> Id: {{this.id}}</p>
                 <img style="margin: 0 auto; width:150px; text-align: center;" src="{{this.thumbnail}}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h1 style="text-align: center; font-size:25px;" class="card-text"> {{this.title}}</h1>
                     <h2 style="text-align: center; font-size:20px;" class="card-text"> {{this.description}}</h2>
                     <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.price}}</h2>
-                    <h2 style="color:red; text-align: center; font-size:10px;" class="card-text"> Stock: {{this.stock}}</h2>
+                    <h2 style="color:rgb(0, 0, 0); text-align: center; font-size:20px;" class="card-text"> Quantity: {{this.Quantity}}</h2>
 
-                    <button style="display: block; margin: 0 auto;" href="#" class="btn btn-primary">Agregar al carrito</button>
+                    <h2 style="color:rgb(0, 0, 0); text-align: center; font-size:20px;" class="card-text"> Total: {{this.Quantity}}</h2>
+
+                <div style="align-items: center; justify-content: space-between;">
+                    <button id="deleteProduct" style="float: right; display: block; margin: 0 auto;" href="#" class="btn btn-danger">DELETE</button>
+                </div>
                 </div>
             </div>
-            {{/each}}
+        
     </div>
+
+
 </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+<footer style="position: relative;">
+<button onclick="window.location.href='/products'" style="margin-left: 700px; position: absolute; right: 0; top: 50%; transform: translateY(1800%);" class="btn btn-primary">HOME</button>
+</footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/socket.io/socket.io.js"></script>
-
-
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/cart.js"></script>
+    <script src="/src/public/js/cart.js"></script>
