se actualiza funcion delete

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,11 +1,11 @@
-<p style="color:brown">hola</p>
 
+{{cart}}
 <div class="container">
     <div style="padding: 80px"; class="row">
-
+        {{#each cart}}
             <div class="card" style="width: 2000px;">
-                <p style="text-align: left;" class="card-text"> Id: {{this.id}}</p>
-                <img style="margin: 0 auto; width:150px; text-align: center;" src="{{this.thumbnail}}" class="card-img-top" alt="...">
+                <p style="text-align: left;" class="card-text"> Id: {{this.product.quantity}}</p>
+                <img style="margin: 0 auto; width:150px; text-align: center;" src="{{this.product.thumbnail}}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h1 style="text-align: center; font-size:25px;" class="card-text"> {{this.title}}</h1>
                     <h2 style="text-align: center; font-size:20px;" class="card-text"> {{this.description}}</h2>
@@ -19,14 +19,14 @@
                 </div>
                 </div>
             </div>
-        
+                    {{/each}}
     </div>
 
 
 </div>
 
 <footer style="position: relative;">
-<button onclick="window.location.href='/products'" style="margin-left: 700px; position: absolute; right: 0; top: 50%; transform: translateY(1800%);" class="btn btn-primary">HOME</button>
+<button onclick="window.location.href='/products'" style="margin-left: 700px; position: absolute; right: 0; top: 50%; transform: translateY(100%);" class="btn btn-primary">HOME</button>
 </footer>
 
 
