--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,5 +1,10 @@
+<button onclick="window.location.href='/carts/65161b18b4f0ae3a37ba72e2'" style="margin-left: 700px; position: absolute; right: 0;" class="btn btn-primary">MY CART</button>
+
 <div class="container">
     <div style="padding: 80px"; class="row">
+
+
+
         {{#each products}}
             <div class="card" style="width: 18rem;">
                 <p style="text-align: left;" class="card-text"> Id: {{this.id}}</p>
@@ -10,7 +15,7 @@
                     <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.price}}</h2>
                     <h2 style="color:red; text-align: center; font-size:10px;" class="card-text"> Stock: {{this.stock}}</h2>
 
-                <button onclick="window.location.href='/cart'" style="display: block; margin: 0 auto;" class="btn btn-primary">ADD TO CART</button>
+                <button onclick="addToCart('65161b18b4f0ae3a37ba72e2' , '{{this.id}}')" style="display: block; margin: 0 auto;" class="btn btn-primary">ADD TO CART</button>
 
                 </div>
             </div>
@@ -52,5 +57,5 @@
 
 
 
-    <script src="src/public/js/products.js"></script>
+    <script src="/js/products.js"></script>
 
