--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,11 +1,11 @@
 
-{{cart}}
+
 <div class="container">
     <div style="padding: 80px"; class="row">
         {{#each cart}}
             <div class="card" style="width: 2000px;">
                 <p style="text-align: left;" class="card-text"> Id: {{cart}}</p>
-                <img style="margin: 0 auto; width:150px; text-align: center;" src="{{this.product.thumbnail}}" class="card-img-top" alt="...">
+                <img style="mfloat: left; margin-right: 10px; width: 150px;" src="{{this.product.thumbnail}}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h1 style="text-align: center; font-size:25px;" class="card-text"> {{this.title}}</h1>
                     <h2 style="text-align: center; font-size:20px;" class="card-text"> {{this.description}}</h2>
