--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,11 +1,9 @@
 <button onclick="window.location.href='/carts/65161b18b4f0ae3a37ba72e2'" style="margin-left: 700px; position: absolute; right: 0;" class="btn btn-primary">MY CART</button>
-<button onclick="logoutAndRedirect();" style="margin-left: 500px; position: absolute; left: 100;" class="btn btn-primary">LOG OUT</button>
+<a href="/logout" style="margin-left: 500px; position: absolute; left: 100;" class="btn btn-primary">LOG OUT</a>
 
 
 <div class="container">
     <div style="padding: 80px"; class="row">
-
-        <h1> Hola {{first_name}} {{last_name}} </h1>
 
         {{#each products}}
 
