--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,5 +1,39 @@
-<h1> Hola {{first_name}} {{last_name}} </h1>
 
 
-{{email}}
-{{age}}
+
+<h1 style="padding-top: 50px; padding-left: 30px; font-size:20px; color: white;"> Hola, {{first_name}} {{last_name}}: </h1>
+
+
+<h2 style="padding-top: 20px; padding-left: 30px; font-size:15px; color: white;">({{email}})</h2>
+
+
+
+
+
+<section style="padding-top: 300px;" class="d-flex justify-content-center align-items-center">
+
+
+<div class="card" style="display: flex; width: 18rem;">
+  <img src="https://miro.medium.com/v2/resize:fit:1400/0*_KC1Umn-n9KBVgAl" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Hace tus compras sin moverte de tu casa...</h5>
+    <a href="http://localhost:8080/products" style="" class="align-items-center btn btn-primary">Ir a Tienda</a>
+  </div>
+</div>
+
+</section>
+
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/socket.io/socket.io.js"></script>
+
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="../public/js/profile.js"></script>
