se agrega roles de usuario

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,31 +1,40 @@
 
+<a href="/logout" style="margin-left: 2070px; position: absolute; left: 100;" class="btn btn-dark">LOG OUT</a>
 
 
-<h1 style="padding-top: 50px; padding-left: 30px; font-size:20px; color: white;"> Hola, {{first_name}} {{last_name}}: </h1>
+<h1 style="padding-top: 50px; padding-left: 30px; font-size:20px; color: white;"> Hello, {{first_name}} {{last_name}}: </h1>
 
 
 <h2 style="padding-top: 20px; padding-left: 30px; font-size:15px; color: white;">({{email}})</h2>
-
-
+<h2 style="padding-top: 0px; padding-left: 30px; font-size:15px; color: white;">Account type: {{role}}</h2>
 
 
 
 <section style="padding-top: 300px;" class="d-flex justify-content-center align-items-center">
 
 
-<div class="card" style="display: flex; width: 18rem;">
+<div class="card" style="display: flex; width: 400px; height: 400px;">
   <img src="https://miro.medium.com/v2/resize:fit:1400/0*_KC1Umn-n9KBVgAl" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Hace tus compras sin moverte de tu casa...</h5>
-    <a href="http://localhost:8080/products" style="" class="align-items-center btn btn-primary">Ir a Tienda</a>
+    <h5 class="card-title">Shop from the comfort of your home...</h5>
+    <a href="http://localhost:8080/products" style="width: 200px" class="align-items-center btn btn-dark">GO TO STORE</a>
   </div>
 </div>
 
+
+
+<div class="card" style="display: flex; width: 400px; height: 400px;">
+  <img src="https://media.istockphoto.com/id/889458208/es/foto/has-llegado-a-nuestra-l%C3%ADnea-de-apoyo.jpg?s=612x612&w=0&k=20&c=6Kqm01clfUm2_RtSbCDg8Cb9_7uBCCbxm6kNikWrxcM=" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Contact us through our chat...</h5>
+    <a href="http://localhost:8080/messages" style="width: 200px" class="align-items-center btn btn-dark">CHAT</a>
+  </div>
+</div>
+
+
+
+
 </section>
-
-
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
