--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -22,12 +22,18 @@
         <input style="width: 450px; height: 40px;" type="text" name="password" value="" />
         <br />
         <button style="width: 450px; height: 40px; margin-top: 100px" class="btn btn-primary" value="submit">SIGN UP</button>
+
+
+        <br />
+
+        <a style="font-size:22px" href="http://localhost:8080/login">Already have an account</a>
+
     </div>
 </form>
 
 
 </div>
-</form>
+
 
 
 
