--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -14,9 +14,14 @@
         <label style="text-align: left; font-size: 25px; color: white; margin-top: 30px "> Password: </label>
         <input style="width: 450px; height: 40px;" type="text" name="password" value="" />
         <br />
+
+                <a href="http://localhost:8080/recover">Forgot password?</a>
         <button style="width: 450px; height: 40px; margin-top: 100px" class="btn btn-primary" value="submit">SIGN IN</button>
 
-        <a href="http://localhost:8080/recover">Forgot password?</a>
+
+        <br />
+        <br />
+                <a style="font-size:22px" href="http://localhost:8080/signup">New account?</a>
     </div>
 </form>
 
