--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,5 +1,6 @@
-<button onclick="window.location.href='/carts/65161b18b4f0ae3a37ba72e2'" style="margin-left: 700px; position: absolute; right: 0;" class="btn btn-primary">MY CART</button>
-<a href="/logout" style="margin-left: 500px; position: absolute; left: 100;" class="btn btn-primary">LOG OUT</a>
+<button onclick="window.location.href='/carts/65161b18b4f0ae3a37ba72e2'" style="margin-left: 700px; position: absolute; right: 0;" class="btn btn-success">MY CART</button>
+<a href="/profile" style="margin-left: 1990px; position: absolute; left: 100;" class="btn btn-primary">HOME</a>
+<a href="/logout" style="margin-left: 2070px; position: absolute; left: 100;" class="btn btn-dark">LOG OUT</a>
 
 
 <div class="container">
