--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,8 +1,8 @@
-
 <a href="/logout" style="margin-left: 2070px; position: absolute; left: 100;" class="btn btn-dark">LOG OUT</a>
 
 
-<h1 style="padding-top: 50px; padding-left: 30px; font-size:20px; color: white;"> Hello, {{first_name}} {{last_name}}: </h1>
+<h1 style="padding-top: 50px; padding-left: 30px; font-size:20px; color: white;"> Hello, {{first_name}} {{last_name}}:
+</h1>
 
 
 <h2 style="padding-top: 20px; padding-left: 30px; font-size:15px; color: white;">({{email}})</h2>
@@ -13,26 +13,37 @@
 <section style="padding-top: 300px;" class="d-flex justify-content-center align-items-center">
 
 
-<div class="card" style="display: flex; width: 400px; height: 400px;">
-  <img src="https://miro.medium.com/v2/resize:fit:1400/0*_KC1Umn-n9KBVgAl" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Shop from the comfort of your home...</h5>
-    <a href="http://localhost:8080/products" style="width: 200px" class="align-items-center btn btn-dark">GO TO STORE</a>
-  </div>
-</div>
+    <div class="card" style="display: flex; width: 400px; height: 400px;">
+        <img src="https://miro.medium.com/v2/resize:fit:1400/0*_KC1Umn-n9KBVgAl"
+            style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Shop from the comfort of your home...</h5>
+            <a href="http://localhost:8080/products" style="width: 200px" class="align-items-center btn btn-success">GO TO STORE</a>
+        </div>
+    </div>
 
 
 
-<div class="card" style="display: flex; width: 400px; height: 400px;">
-  <img src="https://media.istockphoto.com/id/889458208/es/foto/has-llegado-a-nuestra-l%C3%ADnea-de-apoyo.jpg?s=612x612&w=0&k=20&c=6Kqm01clfUm2_RtSbCDg8Cb9_7uBCCbxm6kNikWrxcM=" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Contact us through our chat...</h5>
-    <a href="http://localhost:8080/messages" style="width: 200px" class="align-items-center btn btn-dark">CHAT</a>
-  </div>
-</div>
+    <div class="card" style="display: flex; width: 400px; height: 400px;">
+        <img src="https://media.istockphoto.com/id/889458208/es/foto/has-llegado-a-nuestra-l%C3%ADnea-de-apoyo.jpg?s=612x612&w=0&k=20&c=6Kqm01clfUm2_RtSbCDg8Cb9_7uBCCbxm6kNikWrxcM="
+            style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Contact us through our chat...</h5>
+            <a href="http://localhost:8080/messages" style="width: 200px"
+                class="align-items-center btn btn-dark">CHAT</a>
+        </div>
+    </div>
 
 
-
+    <div class="card" style="display: flex; width: 400px; height: 400px;">
+        <img src="https://images.unsplash.com/photo-1588964895597-cfccd6e2dbf9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3774&q=80"
+            style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title"> Cart </h5>
+            <a href="http://localhost:8080/carts/65161b18b4f0ae3a37ba72e2" style="width: 200px"
+                class="align-items-center btn btn-dark"> CART </a>
+        </div>
+    </div>
 
 </section>
 
