se ajusta botones comando principal

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -13,10 +13,10 @@
 
 </div style="margin-top: 1000px; box-shadow: 5px 5px 10px #888888;">
 <div class="card border-dark mb-3 box-shadow: 5px 5px 10px #888888;" style="max-width: 18rem;">
-    <h2 style="padding-top: 20px; padding-left: 30px; font-size:15px; color: black;">Email: {{email}}</h2>
-    <h2 style="padding-top: 0px; padding-left: 30px; font-size:15px; color: black;">Account type: {{role}}</h2>
-    <p style="padding-top: 0px; padding-left: 30px; font-size:15px; color: black;">Number of logins: {{visitCount}} </p>
-    <p style="padding-top: 0px; padding-left: 30px; font-size:15px; color: black;">Date: {{dateToday}} </p>
+    <h2 style="font-weight: bold; padding-top: 20px; padding-left: 30px; font-size:15px; color: rgb(64, 64, 64);">Email: {{email}}</h2>
+    <h2 style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color: rgb(64, 64, 64);">Account type: {{role}}</h2>
+    <p style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color:  rgb(64, 64, 64);">Number of logins: {{visitCount}} </p>
+    <p style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color:  rgba(121, 121, 121, 0.86);">Date: {{dateToday}} </p>
 </div>
 </div>
 
@@ -36,8 +36,7 @@
             style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Shop from the comfort of your home...</h5>
-            <a href="http://localhost:8080/products" style="width: 200px" class="align-items-center btn btn-success">GO
-                TO STORE</a>
+            <a href="http://localhost:8080/products" style="font-weight: bold; width: 200px" class="align-items-center btn btn-success">GO TO STORE</a>
         </div>
     </div>
 
@@ -45,11 +44,10 @@
 
     <div class="card" style="display: flex; width: 400px; height: 400px;">
         <img src="https://media.istockphoto.com/id/889458208/es/foto/has-llegado-a-nuestra-l%C3%ADnea-de-apoyo.jpg?s=612x612&w=0&k=20&c=6Kqm01clfUm2_RtSbCDg8Cb9_7uBCCbxm6kNikWrxcM="
-            style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
+            style="font-weight: bold;  display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Contact us through our chat...</h5>
-            <a href="http://localhost:8080/messages" style="width: 200px"
-                class="align-items-center btn btn-dark">CHAT</a>
+            <a href="http://localhost:8080/messages" style="font-weight: bold; width: 200px" class="align-items-center btn btn-dark">CHAT</a>
         </div>
     </div>
 
@@ -59,8 +57,7 @@
             style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title"> Cart </h5>
-            <a href="http://localhost:8080/carts/65161b18b4f0ae3a37ba72e2" style="width: 200px"
-                class="align-items-center btn btn-dark"> CART </a>
+            <a href="http://localhost:8080/carts/65161b18b4f0ae3a37ba72e2" style="font-weight: bold; width: 200px" class="align-items-center btn btn-primary"> CART </a>
         </div>
     </div>
 
