--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,3 +1,9 @@
+<a href="/products" style="margin-right: 18px; position: absolute; right: 0;" class="btn btn-success">STORE</a>
+<a href="/profile" style="margin-left: 1990px; position: absolute; left: 100;" class="btn btn-primary">HOME</a>
+<a href="/logout" style="margin-left: 2070px; position: absolute; left: 100;" class="btn btn-dark">LOG OUT</a>
+
+
+
 <div class="container" display="flex" >
     <div style="padding: 80px" ; class="row">
         {{#each cart.products}}
@@ -29,11 +35,7 @@
 
 </div>
 
-<footer style="position: relative;">
-    <button onclick="window.location.href='/products'"
-        style="margin-left: 700px; position: absolute; right: 0; top: 10%; transform: translateY(100%);"
-        class="btn btn-primary">HOME</button>
-</footer>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
