--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,10 +1,15 @@
+
+<a href="/profile" style="margin-left: 1990px; position: absolute; left: 100;" class="btn btn-primary">HOME</a>
+<a href="/logout" style="margin-left: 2070px; position: absolute; left: 100;" class="btn btn-dark">LOG OUT</a>
+
+
+
 <head>
     <h1 style="text-align: center; font-weight: bold; color: white; font-size: 45px;">TIENDAONLINE.UY</h1>
     <p style="text-align: center; color: white; font-size: 25px;">HELP CHAT:</p>
 </head>
 
-<a href="/profile" style="margin-left: 2090px; position: absolute;" class="btn btn-primary">HOME</a>
-<a href="/logout" style="margin-left: 2170px; position: absolute; left: 100;" class="btn btn-dark">LOG OUT</a>
+
 
 
 <body style="position: fixed; margin-left: 300px;">
