--- a/src/views/recover.handlebars
+++ b/src/views/recover.handlebars
@@ -1,8 +1,32 @@
-<form action="http://localhost:8080/api/login" method="post">
 
-<input tyoe="text" name="email" value="email" />
-<input tyoe="text" name="password" value="password" />
+<head>
+    <h1 style="text-align: center; font-weight: bold; color: white; font-size: 45px;">TIENDAONLINE.UY</h1>
+</head>
 
-<button value="submit">Recuperar</button>
 
-</form> 
+
+
+
+<form action="http://localhost:8080/api/recover" method="post">
+    <div style="display: flex; text-align: left; flex-direction: column; align-items: center; margin-top: 200px">
+        <label style="text-align: left; font-size: 25px; color: white; margin-top: 30px "> Email: </label>
+        <input style="width: 450px; height: 40px;" type="text" name="email" value="" />
+
+        <label style="text-align: left; font-size: 25px; color: white; margin-top: 30px "> Password: </label>
+        <input style="width: 450px; height: 40px;" type="text" name="password" value="" />
+        <br />
+
+        <button style="width: 450px; height: 40px; margin-top: 100px" class="btn btn-primary" value="submit">RESET</button>
+
+    </div>
+</form>
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="../public/js/login.js"></script>
