--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -17,6 +17,7 @@
 
                 <a href="http://localhost:8080/recover">Forgot password?</a>
         <button style="width: 450px; height: 40px; margin-top: 100px" class="btn btn-primary" value="submit">SIGN IN</button>
+                <a style="font-size:22px" href="http://localhost:8080/api/github">Login con Github</a>
 
 
         <br />
