se cambia logo de login a github

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -15,14 +15,20 @@
         <input style="width: 450px; height: 40px;" type="text" name="password" value="" />
         <br />
 
-                <a href="http://localhost:8080/recover">Forgot password?</a>
+
         <button style="width: 450px; height: 40px; margin-top: 100px" class="btn btn-primary" value="submit">SIGN IN</button>
-                <a style="font-size:22px" href="http://localhost:8080/api/github">Login con Github</a>
+                         <a href="http://localhost:8080/recover">Forgot password?</a>       
+
+<a href="http://localhost:8080/api/github" style="padding-top: 30px; text-decoration: none;">
+    <img src="https://creazilla-store.fra1.digitaloceanspaces.com/icons/7915997/github-icon-md.png" alt="GitHub" width="100" height="100" style="border: 1px solid #ccc; padding: 5px; display: inline-block;">
+    <span style="font-size: 22px;"></span>
+</a>
+
 
 
         <br />
         <br />
-                <a style="font-size:22px" href="http://localhost:8080/signup">New account?</a>
+                <a style="padding-top: 100px; font-size:22px" href="http://localhost:8080/signup">New account?</a>
     </div>
 </form>
 
