--- a/src/views/recover.handlebars
+++ b/src/views/recover.handlebars
@@ -12,7 +12,7 @@
         <label style="text-align: left; font-size: 25px; color: white; margin-top: 30px "> Email: </label>
         <input style="width: 450px; height: 40px;" type="text" name="email" value="" />
 
-        <label style="text-align: left; font-size: 25px; color: white; margin-top: 30px "> Password: </label>
+        <label style="text-align: left; font-size: 25px; color: white; margin-top: 30px "> New Password: </label>
         <input style="width: 450px; height: 40px;" type="text" name="password" value="" />
         <br />
 
