--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -3,12 +3,10 @@
 <a href="/profile" style="margin-left: 1690px; position: absolute; left: 100;" class="btn btn-primary">HOME</a>
 <a href="/logout" style="margin-left: 1763px; position: absolute; left: 100;" class="btn btn-dark">LOG OUT</a>
 
-
 <div class="container">
     <div style="padding: 80px"; class="row">
 
         {{#each products}}
-
 
             <div class="card" style="width: 18rem;">
                 <p style="text-align: left;" class="card-text"> Id: {{this.id}}</p>
@@ -27,12 +25,6 @@
     </div>
 </div>
 
-
-
-
-
-
-
 <footer style="width: 100%; bottom: 0; position: fixed; background-color:white; padding-top: 30px; bottom: 0; padding-top: 5px;">
   <div style="text-align: center; ">
     {{#each pageNumbers}}
@@ -49,17 +41,8 @@
   </div>
 </footer>
 
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/socket.io/socket.io.js"></script>
-
-
-
-    <script src="../public/js/products.js"></script>
+    <script src="/js/products.js"></script>
 
