--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,7 +1,15 @@
 
-<a onclick="window.location.href='/carts/65161b18b4f0ae3a37ba72e2'" style="margin-right: 19px; position: absolute; right: 0;" class="btn btn-success">MY CART</a>
-<a href="/profile" style="margin-left: 1690px; position: absolute; left: 100;" class="btn btn-primary">HOME</a>
-<a href="/logout" style="margin-left: 1763px; position: absolute; left: 100;" class="btn btn-dark">LOG OUT</a>
+<a onclick="window.location.href='/carts/65161b18b4f0ae3a37ba72e2'" style="margin-right: 130px; position: absolute; right: 0; width: 99px; height: 42px" class="btn btn-success"> CART </a>
+
+
+
+
+
+<a href="/profile" style="margin-left: 1440px; position: absolute; left: 100; width: 99px; height: 40px" class="btn btn-primary">HOME</a>
+<a href="/logout" style="margin-left: 1685px; position: absolute; left: 100; width: 99px; height: 42px" class="btn btn-dark">LOG OUT</a>
+
+
+
 
 <div class="container">
     <div style="padding: 80px"; class="row">
