--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,4 +1,4 @@
-<a href="/logout" style="margin-left: 1615px; position: absolute; left: 100;" class="btn btn-dark">LOG OUT</a>
+<a href="/logout" style="margin-left: 1590px; position: absolute; left: 100; width: 99px; height: 40px" class="btn btn-dark">LOG OUT</a>
 
 <header>
 
