se finaliza con las funciones y botones de add product to cart

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,10 +9,10 @@
 <form action="http://localhost:8080/api/login" method="post">
     <div style="display: flex; text-align: left; flex-direction: column; align-items: center; margin-top: 200px">
         <label style="text-align: left; font-size: 25px; color: white; margin-top: 30px "> Email: </label>
-        <input style="width: 450px; height: 40px;" type="text" name="email" value="" />
+        <input style="width: 450px; height: 40px;" type="text" name="email" value="maria@hotmail.com" />
 
         <label style="text-align: left; font-size: 25px; color: white; margin-top: 30px "> Password: </label>
-        <input style="width: 450px; height: 40px;" type="text" name="password" value="" />
+        <input style="width: 450px; height: 40px;" type="text" name="password" value="123456" />
         <br />
 
 
