--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,30 +1,34 @@
-<a href="/products" style="margin-right: 130px; position: absolute; right: 0; width: 99px; height: 40px" class="btn btn-success">STORE</a>
+<a href="/products" style="margin-right: 228px; position: absolute; right: 0; width: 96px; height: 40px"
+    class="btn btn-success">STORE</a>
 
-<a href="/profile" style="margin-left: 1440px; position: absolute; left: 100; width: 99px; height: 40px" class="btn btn-primary">HOME</a>
-<a href="/logout" style="margin-left: 1590px; position: absolute; left: 100; width: 99px; height: 40px" class="btn btn-dark">LOG OUT</a>
+<a href="/profile" style="margin-left: 1340px; position: absolute; left: 100; width: 99px; height: 40px"
+    class="btn btn-primary">HOME</a>
+<a href="/logout" style="margin-left: 1590px; position: absolute; left: 100; width: 99px; height: 40px"
+    class="btn btn-dark">LOG OUT</a>
 
 
-<div class="container" display="flex" >
+<div class="container" display="flex">
     <div style="padding: 80px" ; class="row">
         {{#each cart.products}}
         <div class="card" style="width: 2000px;">
             <p style="text-align: left;" class="card-text"> Id: {{this.product._id}}</p>
             <img style="float: left; margin-right: 10px; width: 350px;" src="{{this.product.thumbnail}}"
-                class="card-img-top" alt="...">
+                class="card-img-top" alt="..." title="Id: {{this.product._id}}">
             <div class="card-body">
 
-
-                <h1 id="title" ; style="text-align: center; font-size:25px;" class="card-text"> {{this.title}}</h1>
+                <h1 id="title" ; style="text-align: center; font-size:25px;" class="card-text"> {{this.product.title}}
+                </h1>
                 <h2 style="text-align: center; font-size:20px;" class="card-text"> {{this.product.description}}</h2>
                 <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.product.price}}</h2>
                 <h2 style="color:rgb(0, 0, 0); text-align: center; font-size:20px;" class="card-text"> Quantity:
-                    {{his.product.quantity}}</h2>
+                    {{this.quantity}}</h2>
 
                 <h2 style="color:rgb(0, 0, 0); text-align: center; font-size:20px;" class="card-text"> Total:
-                    {{his.product.quantity}}</h2>
+                    {{this.quantity}}</h2>
 
                 <div style="align-items: center; justify-content: space-between;">
-                    <button id="deleteProduct" style="float: right; display: block; margin: 0 auto;" href="#"
+                    <button onclick="deleteProductFromCart('65161b18b4f0ae3a37ba72e2' , '{{this.id}}')"
+                        style="float: right; display: block; margin: 0 auto;"
                         class="btn btn-danger">DELETE</button>
                 </div>
             </div>
