--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,56 +1,62 @@
-
-<a onclick="window.location.href='/carts/65161b18b4f0ae3a37ba72e2'" style="margin-right: 130px; position: absolute; right: 0; width: 99px; height: 42px" class="btn btn-success"> CART </a>
-
-
-
+<a onclick="window.location.href='/carts/65161b18b4f0ae3a37ba72e2'"
+  style="margin-right: 228px; position: absolute; right: 0; width: 96px; height: 42px" class="btn btn-success"> CART
+</a>
 
 
-<a href="/profile" style="margin-left: 1440px; position: absolute; left: 100; width: 99px; height: 40px" class="btn btn-primary">HOME</a>
-<a href="/logout" style="margin-left: 1590px; position: absolute; left: 100; width: 99px; height: 40px" class="btn btn-dark">LOG OUT</a>
+
+
+
+<a href="/profile" style="margin-left: 1340px; position: absolute; left: 100; width: 99px; height: 40px"
+  class="btn btn-primary">HOME</a>
+<a href="/logout" style="margin-left: 1590px; position: absolute; left: 100; width: 99px; height: 40px"
+  class="btn btn-dark">LOG OUT</a>
 
 
 
 
 <div class="container">
-    <div style="padding: 80px"; class="row">
+  <div style="padding: 80px" ; class="row">
 
-        {{#each products}}
+    {{#each products}}
 
-            <div class="card" style="width: 18rem;">
-                <p style="text-align: left;" class="card-text"> Id: {{this.id}}</p>
-                <img style="margin: 0 auto; width:150px; text-align: center;" src="{{this.thumbnail}}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h1 style="text-align: center; font-size:25px;" class="card-text"> {{this.title}}</h1>
-                    <h2 style="text-align: center; font-size:20px;" class="card-text"> {{this.description}}</h2>
-                    <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.price}}</h2>
-                    <h2 style="color:red; text-align: center; font-size:10px;" class="card-text"> Stock: {{this.stock}}</h2>
+    <div class="card" style="width: 18rem;">
+      <p style="text-align: left;" class="card-text"> Id: {{this.id}}</p>
+      <img style="margin: 0 auto; width:150px; text-align: center;" src="{{this.thumbnail}}" class="card-img-top"
+        alt="...">
+      <div class="card-body">
+        <h1 style="text-align: center; font-size:25px;" class="card-text"> {{this.title}}</h1>
+        <h2 style="text-align: center; font-size:20px;" class="card-text"> {{this.description}}</h2>
+        <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.price}}</h2>
+        <h2 style="color:red; text-align: center; font-size:10px;" class="card-text"> Stock: {{this.stock}}</h2>
 
-                <button onclick="addToCart('65161b18b4f0ae3a37ba72e2' , '{{this.id}}')" style="display: block; margin: 0 auto;" class="btn btn-primary">ADD TO CART</button>
+        <button onclick="addToCart('65161b18b4f0ae3a37ba72e2' , '{{this.id}}')" style="display: block; margin: 0 auto;"
+          class="btn btn-primary">ADD TO CART </button>
 
-                </div>
-            </div>
-            {{/each}}
+      </div>
     </div>
+    {{/each}}
+  </div>
 </div>
 
-<footer style="width: 100%; bottom: 0; position: fixed; background-color:white; padding-top: 30px; bottom: 0; padding-top: 5px;">
+<footer
+  style="width: 100%; bottom: 0; position: fixed; background-color:white; padding-top: 30px; bottom: 0; padding-top: 5px;">
   <div style="text-align: center; ">
     {{#each pageNumbers}}
-      {{#if this.isCurrent}}
-        <a style="text-align: center; font-size: 22px;" href="{{null}}">{{this.number}}</a>
-      {{/if}}
-      {{#if this.isPrevious}}
-        <a style="text-align: center; font-size: 22px;" href="{{this.link}}">{{this.number}}</a>
-      {{/if}}
-      {{#if this.isNext}}
-        <a style="text-align: center; font-size: 22px;" href="{{this.link}}">{{this.number}}</a>
-      {{/if}}
+    {{#if this.isCurrent}}
+    <a style="text-align: center; font-size: 22px;" href="{{null}}">{{this.number}}</a>
+    {{/if}}
+    {{#if this.isPrevious}}
+    <a style="text-align: center; font-size: 22px;" href="{{this.link}}">{{this.number}}</a>
+    {{/if}}
+    {{#if this.isNext}}
+    <a style="text-align: center; font-size: 22px;" href="{{this.link}}">{{this.number}}</a>
+    {{/if}}
     {{/each}}
   </div>
 </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/products.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/products.js"></script>
