--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -16,9 +16,8 @@
                 class="card-img-top" alt="..." title="Id: {{this.product._id}}">
             <div class="card-body">
 
-                <h1 id="title" ; style="text-align: center; font-size:25px;" class="card-text"> {{this.product.title}}
+                <h1 id="title" ; style="text-align: center; font-size:25px;" class="card-text"> {{this.product.title}} - {{this.product.description}}
                 </h1>
-                <h2 style="text-align: center; font-size:20px;" class="card-text"> {{this.product.description}}</h2>
                 <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.product.price}}</h2>
                 <h2 style="color:rgb(0, 0, 0); text-align: center; font-size:20px;" class="card-text"> Quantity:
                     {{this.quantity}}</h2>
