--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -29,6 +29,7 @@
                     <button onclick="deleteProductFromCart('65161b18b4f0ae3a37ba72e2' , '{{this.id}}')"
                         style="float: right; display: block; margin: 0 auto;"
                         class="btn btn-danger">DELETE</button>
+                        
                 </div>
             </div>
         </div>
@@ -45,4 +46,4 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="/src/public/js/cart.js"></script>
+<script src="/js/cart.js"></script>
