se activa funcion Delete Product from Cart

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -26,7 +26,7 @@
                     {{this.quantity}}</h2>
 
                 <div style="align-items: center; justify-content: space-between;">
-                    <button onclick="deleteProductFromCart('65161b18b4f0ae3a37ba72e2' , '{{this.id}}')"
+                    <button onclick="deleteProductFromCart('65161b18b4f0ae3a37ba72e2' , '{{this._id}}')"
                         style="float: right; display: block; margin: 0 auto;"
                         class="btn btn-danger">DELETE</button>
                         
