preparacion entrega final 1

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,4 +1,4 @@
-<a href="/logout" style="margin-left: 1590px; position: absolute; left: 100; width: 99px; height: 40px"
+<a href="/logout" style="margin-left: 1490px; position: absolute; left: 100; width: 99px; height: 40px"
     class="btn btn-dark">LOG OUT</a>
 
 <header>
@@ -37,11 +37,11 @@
 <section style="padding-top: 100px;" class="d-flex justify-content-center align-items-center">
 
 
-    <div class="card" style="display: flex; width: 400px; height: 400px;">
+    <div class="card" style="display: flex; width: 300px; height: 300px;">
         <img src="https://miro.medium.com/v2/resize:fit:1400/0*_KC1Umn-n9KBVgAl"
-            style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
+            style="display: flex; width: 300px; height: 190px" ; class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Shop from the comfort of your home...</h5>
+            <h5 class="card-title">Shop from your home...</h5>
             <a href="http://localhost:8080/products" style="font-weight: bold; width: 200px"
                 class="align-items-center btn btn-success">GO TO STORE</a>
         </div>
@@ -49,20 +49,20 @@
 
 
 
-    <div class="card" style="display: flex; width: 400px; height: 400px;">
+    <div class="card" style="display: flex; width: 300px; height: 300px;">
         <img src="https://media.istockphoto.com/id/889458208/es/foto/has-llegado-a-nuestra-l%C3%ADnea-de-apoyo.jpg?s=612x612&w=0&k=20&c=6Kqm01clfUm2_RtSbCDg8Cb9_7uBCCbxm6kNikWrxcM="
-            style="font-weight: bold;  display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
+            style="font-weight: bold;  display: flex; width: 300px; height: 190px" ; class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Contact us through our chat...</h5>
+            <h5 class="card-title">Contact us...</h5>
             <a href="http://localhost:8080/messages" style="font-weight: bold; width: 200px"
                 class="align-items-center btn btn-dark">CHAT</a>
         </div>
     </div>
 
 
-    <div class="card" style="display: flex; width: 400px; height: 400px;">
+    <div class="card" style="display: flex; width: 300px; height: 300px;">
         <img src="https://images.unsplash.com/photo-1588964895597-cfccd6e2dbf9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3774&q=80"
-            style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
+            style="display: flex; width: 300px; height: 190px" ; class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title"> Cart </h5>
             <a href="http://localhost:8080/carts/65161cf7b4f0ae3a37ba7332" style="font-weight: bold; width: 200px"
@@ -71,9 +71,9 @@
     </div>
 
 
-    <div class="card" style="display: flex; width: 400px; height: 400px;">
+    <div class="card" style="display: flex; width: 300px; height: 300px;">
         <img src="https://www.cmcrossroads.com/sites/default/files/article/2016/configuration-management-plan.jpg"
-            style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
+            style="display: flex; width: 300px; height: 190px" ; class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title"> Adjust your settings </h5>
             <a href="http://localhost:8080/settings" style="font-weight: bold; width: 200px"
@@ -82,6 +82,27 @@
     </div>
 
 
+
+    <div class="card" style="display: flex; width: 300px; height: 300px;">
+        <img src="https://media.istockphoto.com/id/521247381/vector/avatars-characters.jpg?s=612x612&w=0&k=20&c=y1Em7kZDV6JvIAs576l_K-DQnDK_1CEDVPKCLaDZVp8="
+            style="display: flex; width: 300px; height: 190px" ; class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title"> View users </h5>
+            <a href="http://localhost:8080/users" style="font-weight: bold; width: 200px; color: white"
+                class="align-items-center btn btn-warning"> USERS </a>
+        </div>
+    </div>
+
+
+    <div class="card" style="display: flex; width: 300px; height: 300px;">
+        <img src="https://cdn.learnwoo.com/wp-content/uploads/2016/11/Adding-Products_Cropped.png"
+            style="display: flex; width: 300px; height: 190px" ; class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title"> Add Document to app </h5>
+            <a href="http://localhost:8080/addproducts" style="font-weight: bold; width: 200px; color: white"
+                class="align-items-center btn btn-dark"> ADD DOCUMENT </a>
+        </div>
+    </div>
 
 </section>
 
@@ -94,4 +115,4 @@
 
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="../public/js/profile.js"></script>
+<script src="/js/profile.js"></script>
