--- a/src/views/settings.handlebars
+++ b/src/views/settings.handlebars
@@ -7,7 +7,7 @@
 
 
 <div>
-<h5 style="text-align: center; padding-top: 50px; font-size: 25px; color: white; margin-top: 30px ">Go to the link to reset your password:</h5>
+<h5 style="text-align: center; padding-top: 100px; font-size: 25px; color: white; margin-top: 30px ">Go to the link to reset your password:</h5>
 </div>
 
 <div style="text-align: center; padding-top: 200px;">
@@ -20,4 +20,4 @@
   integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/mail.js"></script>
+<script src="/js/settings.js"></script>
