--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -40,21 +40,13 @@
     </div>
 
 
-
-
+    <div style="float: center; display: block; margin: 0 auto; padding: 20px">
+        <button onclick="window.location.href='/carts/65161cf7b4f0ae3a37ba7332/checkout'"
+            style="float: center; display: block; margin: 0 auto; padding: 20px" 
+            class="btn btn-primary">CHECKOUT</button>
+    </div>
 
 </div>
-
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="/js/cart.js"></script>
-
-
 
 
 
