se repara admin/user profile

--- a/src/views/img.handlebars
+++ b/src/views/img.handlebars
@@ -1,3 +1,13 @@
+<a href="/products" style="margin-right: 228px; position: absolute; right: 0; width: 96px; height: 40px"
+    class="btn btn-success">STORE</a>
+
+<a href="/profile" style="margin-left: 1340px; position: absolute; left: 100; width: 99px; height: 40px"
+    class="btn btn-primary">HOME</a>
+<a href="/logout" style="margin-left: 1490px; position: absolute; left: 100; width: 99px; height: 40px"
+    class="btn btn-dark">LOG OUT</a>
+
+
+
 <form 
 action="http://localhost:8080/img/"
 method="post"
