--- a/src/views/profileadmin.handlebars
+++ b/src/views/profileadmin.handlebars
@@ -16,12 +16,14 @@
 <div class="card border-dark mb-3 box-shadow: 5px 5px 10px #888888;" style="max-width: 18rem;">
     <h2 style="font-weight: bold; padding-top: 20px; padding-left: 30px; font-size:15px; color: rgb(64, 64, 64);">Email:
         {{email}}</h2>
-    <h2 style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color: rgb(64, 64, 64);">Account
-        type: {{role}}</h2>
-    <p style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color:  rgb(64, 64, 64);">Number
-        of logins: {{visitCount}} </p>
-    <p
-        style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color:  rgba(121, 121, 121, 0.86);">
+    <h2 style="font-weight: bold; padding-top: 0px; padding-left: 30px; 
+    font-size:15px; color: rgb(64, 64, 64);">
+        Account type: {{role}}</h2>
+    <p style="font-weight: bold; padding-top: 0px; padding-left: 30px; 
+    font-size:15px; color:  rgb(64, 64, 64);">
+        Number of logins: {{visitCount}} </p>
+    <p style="font-weight: bold; padding-top: 0px; padding-left: 30px; 
+    font-size:15px; color:  rgba(121, 121, 121, 0.86);">
         Date: {{dateToday}} </p>
 </div>
 </div>
@@ -83,7 +85,26 @@
 
 
 
+    <div class="card" style="display: flex; width: 300px; height: 300px;">
+        <img src="https://media.istockphoto.com/id/521247381/vector/avatars-characters.jpg?s=612x612&w=0&k=20&c=y1Em7kZDV6JvIAs576l_K-DQnDK_1CEDVPKCLaDZVp8="
+            style="display: flex; width: 300px; height: 190px" ; class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title"> View users </h5>
+            <a href="http://localhost:8080/users" style="font-weight: bold; width: 200px; color: white"
+                class="align-items-center btn btn-warning"> USERS </a>
+        </div>
+    </div>
 
+
+    <div class="card" style="display: flex; width: 300px; height: 300px;">
+        <img src="https://cdn.learnwoo.com/wp-content/uploads/2016/11/Adding-Products_Cropped.png"
+            style="display: flex; width: 300px; height: 190px" ; class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title"> Add Document to app </h5>
+            <a href="http://localhost:8080/addproducts" style="font-weight: bold; width: 200px; color: white"
+                class="align-items-center btn btn-dark"> ADD DOCUMENT </a>
+        </div>
+    </div>
 
 </section>
 
@@ -96,4 +117,4 @@
 
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/profile.js"></script>
+<script src="/js/profileadmin.js"></script>
