se agrega conexion del ticket con la compra

--- a/src/views/checkoutFinal.handlebars
+++ b/src/views/checkoutFinal.handlebars
@@ -33,6 +33,7 @@
 
         <h1 id="total-amount" style="text-align: right; font-size: 18px;" class="card-text; thead-dark;"> </h1>
 
+      </div>
 
 
     </div>
