se termina de configurar email en checkout

--- a/src/views/checkout.handlebars
+++ b/src/views/checkout.handlebars
@@ -73,7 +73,7 @@
 
       </div>
       <div style="margin-bottom: 30px">
-        <button onclick="window.location.href='/carts/checkout/finish'"
+        <button id="payButton" onclick="window.location.href='/carts/checkout/finish'"
           style="display: block; margin: 0 auto; padding: 20px; width: 200px;" class="btn btn-danger"> PAY </button>
       </div>
 
